src/tests/snapshots/mu__tests__loops__for_print_nothing.snap
---
source: src/tests/loops.rs
expression: snapshot
---
# Input:
for i in 10..0:
  print i


# Result (success):
false

# Stdout:


