src/tests/snapshots/mu__tests__loops__for_range_vars.snap
---
source: src/tests/loops.rs
expression: snapshot
---
# Input:
start := 0
end := 10
for i in start..end:
  print i


# Result (success):
false

# Stdout:
0
1
2
3
4
5
6
7
8
9


